--- a/Chelo Tasnim Haryono_Website/job_list/index.html
+++ b/Chelo Tasnim Haryono_Website/job_list/index.html
@@ -56,7 +56,7 @@
                         <p>Contoh :</p>
                         <p>Pertamina</p>
                         <p>Bank BRI</p>
-                        <p>Programmer</p>
+                        <p>Manajer</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 <i class="bx bx-customize"></i>
             </div>
             <div class="box-list">
-                <a>Lowongan Disimpan</a>
+                <a onclick="toggleFav()">Lowongan Disimpan</a>
                 <i class="bx bx-bookmarks"></i>
             </div>
         </div>
@@ -192,7 +192,7 @@
                     </label>
                     <div class="filter-list">
                         <input type="checkbox" onchange="setFilter('tipe', this)" name="tipe" value="kerja tetap">
-                        Pekerja Tetap
+                        Kerja Tetap
                     </div>
                     <div class="filter-list">
                         <input type="checkbox" onchange="setFilter('tipe', this)" name="tipe" value="kontrak">
@@ -226,7 +226,7 @@
                 </div>
                 <div class="box-content">
                     <div class="main">
-                        <h2>Relationship Manager</h2>
+                        <h2 onclick="directTo('work_detail.html')">Relationship Manager</h2>
                         <p>PT Amerta Indah Otsuka</p>
                         <span>Pasuruan, Jawa Timur</span>
                     </div>
@@ -249,7 +249,7 @@
                     <div class="btn" onclick="setFav(this)">
                         <i class="bx bx-bookmark-plus"></i>
                     </div>
-                    <div class="btn">
+                    <div class="btn" onclick="directTo('work_detail.html')">
                         <i class="bx bx-dots-vertical"></i>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="box-content">
                     <div class="main">
-                        <h2>Chief Engineer</h2>
+                        <h2 onclick="directTo('work_detail.html')">Chief Engineer</h2>
                         <p>PT Amerta Indah Otsuka</p>
                         <span>Pasuruan, Jawa Timur</span>
                     </div>
@@ -287,7 +287,7 @@
                     <div class="btn" onclick="setFav(this)">
                         <i class="bx bx-bookmark-plus"></i>
                     </div>
-                    <div class="btn">
+                    <div class="btn" onclick="directTo('work_detail.html')">
                         <i class="bx bx-dots-vertical"></i>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                 </div>
                 <div class="box-content">
                     <div class="main">
-                        <h2>Crane Operator</h2>
+                        <h2 onclick="directTo('work_detail.html')">Crane Operator</h2>
                         <p>PT Paiton Operation</p>
                         <span>Probolinggo, Jawa Timur</span>
                     </div>
@@ -325,7 +325,7 @@
                     <div class="btn" onclick="setFav(this)">
                         <i class="bx bx-bookmark-plus"></i>
                     </div>
-                    <div class="btn">
+                    <div class="btn" onclick="directTo('work_detail.html')">
                         <i class="bx bx-dots-vertical"></i>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="box-content">
                     <div class="main">
-                        <h2>Supervisor</h2>
+                        <h2 onclick="directTo('work_detail.html')">Supervisor</h2>
                         <p>PT Puninar Logistics</p>
                         <span>DKI Jakarta</span>
                     </div>
@@ -363,7 +363,7 @@
                     <div class="btn" onclick="setFav(this)">
                         <i class="bx bx-bookmark-plus"></i>
                     </div>
-                    <div class="btn">
+                    <div class="btn" onclick="directTo('work_detail.html')">
                         <i class="bx bx-dots-vertical"></i>
                     </div>
                 </div>
