--- a/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
+++ b/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="../../Chelo Tasnim Haryono_Bahan/icons/app-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Chelo Tasnim Haryono_Bahan/plugins/boxicons-2.0.7/css/boxicons.min.css">
     <link rel="stylesheet" href="../styles/dashboard.css">
-    <title>Bisa Kerja | Detail Lowongan</title>
+    <title>Bisa Kerja | Detail Proyek</title>
 </head>
 
-<body>
+<body class="proyek">
     <!-- Loading Layer -->
     <div class="loading-layer">
         <div class="content">
@@ -30,7 +30,7 @@
         <div class="nav-header">
             <div class="info">
                 <i class="bx bx-info-circle"></i>
-                Pencarian Lowongan Tidak Dipungut Biaya
+                Pencarian Proyek Tidak Dipungut Biaya
             </div>
             <div class="other-nav">
                 <a onclick="directTo('../index.html')">Layanan</a>
@@ -97,77 +97,60 @@
     <!-- Detail Lowongan -->
     <div class="detail-container">
         <div class="detail-header">
-            <div class="logo is-detail">
-                <img id="d-logo" src="../../Chelo Tasnim Haryono_Bahan/images/otsuka.png" alt="Logo Perusahaan"
-                    draggable="false">
-            </div>
             <div class="typo">
                 <div class="is-detail">
-                    <h2 class="d-job">Relationship Manager</h2>
-                    <p class="d-name">PT Amerta Indah Otsuka</p>
+                    <h2 class="d-name">Web Promosi Produk</h2>
+                    <p class="d-cat">Website Landing Page</p>
                     <span>
-                        <i class="bx bx-map-pin"></i>
-                        <div class="d-loc">Pasuruan, Jawa Timur</div>
+                        <i class="bx bx-calendar"></i>
+                        <div class="d-up">Diunggah 3 Hari Yang Lalu</div>
                     </span>
                 </div>
                 <div class="common-detail is-detail">
                     <div class="common">
-                        <label>Lowongan Dimulai</label>
-                        <p class="d-start">3 Hari Yang Lalu</p>
-                    </div>
-                    <div class="common">
-                        <label>Lowongan Berakhir</label>
+                        <label>Tenggat Waktu</label>
                         <p class="d-end">20 November 2023</p>
                     </div>
                     <div class="common">
-                        <label>Sektor Kerja</label>
-                        <p class="d-sector">Manajemen</p>
+                        <label>Kategori</label>
+                        <p class="d-cat">Website Landing Page</p>
                     </div>
                     <div class="common">
-                        <label>Jabatan Kerja</label>
-                        <p class="d-job">Relationship Manager</p>
+                        <label>Rentang Harga</label>
+                        <p class="d-range">Rp 200.000 - Rp 700.000</p>
                     </div>
                     <div class="common">
-                        <label>Rentang Gaji</label>
-                        <p class="d-range">Gaji Dirahasiakan</p>
-                    </div>
-                    <div class="common">
-                        <label>Tipe</label>
-                        <p class="d-tipe">Kerja Tetap</p>
+                        <label>Penawar</label>
+                        <p class="d-ask">12 Orang (Saat Ini)</p>
                     </div>
                 </div>
-                <div class="btn on is-detail">Lamar Lowongan</div>
+                <div class="btn on is-detail">Ajukan Penawaran</div>
             </div>
         </div>
         <div class="detail-more">
             <div class="detail-part is-detail">
                 <label>Deskripsi</label>
                 <ul id="d-desc">
-                    <li>Mengimplementasikan kebijakan dan prosedur manajemen</li>
-                    <li>Membangun hubungan bisnis dengan klien dan konsumen</li>
-                    <li>Memecahkan tantangan dari segi bisnis dan teknis</li>
-                    <li>Menerapkan strategi penjualan dengan memperluas jangkauan klien</li>
+                    <li>Halaman utama yang menyoroti daftar menu diikuti lokasi gerai dan profile geprek kak rose</li>
+                    <li>Tema warna utama geprek kak rose, merah dan kuning</li>
+                    <li>Daftar kontak gerai dengan platform digital lain</li>
                 </ul>
             </div>
             <div class="detail-part is-detail">
                 <label>Persyaratan</label>
                 <ul id="d-req">
-                    <li>S1 Manajemen dengan minimal IPK 3.00</li>
-                    <li>Minimal pengalaman 2 tahun dalam bidang ini</li>
-                    <li>Memiliki kemampuan komunikasi dan negosiasi yang baik</li>
-                    <li>Memiliki kondisi fisik yang sehat</li>
-                    <li>Usia Maksimal 35 Tahun</li>
-                    <li>Bersedia untuk penempatan di Pasuruan, Jawa Timur</li>
-                    <li>Bersedia bekerja part-time sewaktu waktu di hari sabtu & minggu</li>
+                    <li>Konten tidak mengandung unsur sara</li>
+                    <li>Menggunakan assets yang kami berikan</li>
+                    <li>Menggunakan konsep Progressive Web App</li>
+                    <li>Tidak menggunakan alat atau bahan bantu yang kadaluarsa</li>
                 </ul>
             </div>
             <div class="about-company is-detail">
-                <span>Tentang Perusahaan</span>
-                <h2 class="d-name">PT Amerta Indah Otsuka</h2>
+                <span>Tentang Pemberi Proyek</span>
+                <h2 class="d-owner">Geprek Kak Rose Malang</h2>
                 <p class="d-comp_desc">
-                    PT Amerta Indah Otsuka merupakan produsen dari produk kesehatan seperti Pocari Sweat, SOYJOY, air
-                    ion, Oronamin C dan Fiber Mini. Melalui produk-produk kami, PT Amerta Indah Otsuka membawa filosofi
-                    mereka, yaitu ingin menciptakan produk baru untuk kesehatan yang lebih baik di seluruh dunia.
+                    Usaha makanan cepat saji di Ruko Soekarno Hatta, Blok DR, Jl. Soekarno Hatta No.15 65142, Kelurahan
+                    Mojolangu, Jawa Timur. Menyediakan aneka olahan ayam geprek, mie geprek dan aneka sambal.
                 </p>
             </div>
         </div>
@@ -182,7 +165,7 @@
 
     <div class="focus-tip">Arahkan Cursor Ke Konten</div>
 
-    <script src="../scripts/j_detail.js"></script>
+    <script src="../scripts/p_detail.js"></script>
     <script src="../scripts/main.js"></script>
 </body>
 
