--- a/Chelo Tasnim Haryono_Website/job_list/index.html
+++ b/Chelo Tasnim Haryono_Website/job_list/index.html
@@ -233,7 +233,7 @@
                 <a class="btn on">Pekerjaan</a>
                 <a class="btn" onclick="directTo('proyek.html')">Proyek</a>
                 <a class="btn" onclick="slideFilter()">
-                    <i class="bx bx-menu-alt-right"></i>
+                    <i class="bx bx-filter"></i>
                 </a>
             </div>
             <div class="box" data-d="nondisabilitas" data-c="pt amerta indah otsuka"
