--- a/Chelo Tasnim Haryono_Website/job_list/proyek.html
+++ b/Chelo Tasnim Haryono_Website/job_list/proyek.html
@@ -205,7 +205,7 @@
                 <a class="btn" onclick="directTo('index.html')">Pekerjaan</a>
                 <a class="btn on">Proyek</a>
                 <a class="btn" onclick="slideFilter()">
-                    <i class="bx bx-menu-alt-right"></i>
+                    <i class="bx bx-filter"></i>
                 </a>
             </div>
             <div class="box" data-n="website promosi produk" data-k="website" data-l="indonesia" data-t="2"
