--- a/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
+++ b/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
@@ -159,7 +159,7 @@
 
 
     <!-- Mode Fokus -->
-    <button class="btn focus-mode-btn">
+    <button class="btn on focus-mode-btn">
         <i class="bx bx-search-alt"></i>
     </button>
 
