--- a/Chelo Tasnim Haryono_Website/job_list/work_detail.html
+++ b/Chelo Tasnim Haryono_Website/job_list/work_detail.html
@@ -82,7 +82,7 @@
                 <i class="bx bx-briefcase"></i>
             </div>
             <div class="box-list">
-                <a onclick="directTo('index.html')">Cari Proyek</a>
+                <a onclick="directTo('proyek.html')">Cari Proyek</a>
                 <i class="bx bx-laptop"></i>
             </div>
         </div>
@@ -176,7 +176,7 @@
 
 
     <!-- Mode Fokus -->
-    <button class="btn focus-mode-btn">
+    <button class="btn on focus-mode-btn">
         <i class="bx bx-search-alt"></i>
     </button>
 
