--- a/Chelo Tasnim Haryono_Website/job_list/proyek.html
+++ b/Chelo Tasnim Haryono_Website/job_list/proyek.html
@@ -339,7 +339,7 @@
             <div class="not-found">
                 <img src="../../Chelo Tasnim Haryono_Bahan/icons/c-icon-10.png" alt="Tidak Ditemukan" draggable="false">
                 <p>
-                    Lowongan Yang Anda Cari
+                    Proyek Yang Anda Cari
                     <br>
                     Belum Tersedia
                 </p>
@@ -349,7 +349,7 @@
                 <p>
                     Anda Belum Menyimpan
                     <br>
-                    Lowongan Terkait
+                    Proyek Terkait
                 </p>
             </div>
         </div>
