--- a/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
+++ b/Chelo Tasnim Haryono_Website/job_list/proyek_detail.html
@@ -82,7 +82,7 @@
                 <i class="bx bx-briefcase"></i>
             </div>
             <div class="box-list">
-                <a onclick="directTo('index.html')">Cari Proyek</a>
+                <a onclick="directTo('proyek.html')">Cari Proyek</a>
                 <i class="bx bx-laptop"></i>
             </div>
         </div>
